<resources>
    <string name="app_name">EduNavigation</string>
    <string name="jojo_stardust_crusaders">JOJO Stardust Crusaders</string>
    <string name="banner">Banner</string>
    <string name="poster">Poster</string>
    <string name="hirohiko_araki">Hirohiko Araki</string>
    <string name="director">Director:</string>
    <string name="desc">In 1983, DIO, the vampire enemy of Jonathan Joestar which has possessed Jonathan\'s body, emerges from the bottom of the Atlantic Ocean. As DIO develops a manifestation of life energy known as a Stand, Jonathan\'s descendants Joseph Joestar, Jotaro Kujo, and Holly Kujo also gain Stands. In 1987, Holly cannot control her Stand and is estimated to have fifty days left to live. Jotaro, Joseph, and fellow Stand users Muhammad Avdol and Noriyaki Kakyoin travel from Japan to Egypt to find and kill DIO, which will free Holly. Because they are being targeted by a number of Stand user assassins, the group cannot travel to Egypt by commercial plane. The group is later joined by Jean Pierre Polnareff, a former assassin of DIO who discovers that DIO is employing the murderer of Polnareff\'s sister, along with the Stand user dog Iggy. Aided by Kakyoin, who reveals the nature of DIO\'s time-stopping Stand The World in his last moments, Jotaro kills DIO in Egypt, allowing Holly to recover.</string>
    <string name="actors">Actors</string>
    <string name="jotaro_kujo">Jotaro Kujo</string>
    <string name="joseph_joestar">Joseph Joestar</string>
    <string name="noriaki_kakyoin">Noriaki Kakyoin</string>
    <string name="mohammed_abdul">Mohammed Abdul</string>
    <string name="jean_pierre_polnareff">Jean Pierre Polnareff</string>
    <string name="iggy">Iggy</string>
    <string name="dio">DIO</string>
    <string name="like">Like</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>
    <string name="roll">Roll</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="first_number">First number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="second_number">Second number</string>
    <string name="random">Random</string>
    <string name="results">Results</string>
    <string name="dice">Dice</string>
    <string name="name">Murat Kaparov</string>
    <string name="yellow_star">Yellow Star</string>

    <string name="bio">Beginning in the eighth century B.C., Ancient Rome grew from a small town on central Italy’s Tiber River into an empire that at its peak encompassed most of continental Europe, Britain, much of western Asia, northern Africa and the Mediterranean islands. Among the many legacies of Roman dominance are the widespread use of the Romance languages (Italian, French, Spanish, Portuguese and Romanian) derived from Latin, the modern Western alphabet and calendar and the emergence of Christianity as a major world religion. After 450 years as a republic, Rome became an empire in the wake of Julius Caesar’s rise and fall in the first century B.C. The long and triumphant reign of its first emperor, Augustus, began a golden age of peace and prosperity; by contrast, the Roman Empire’s decline and fall by the fifth century A.D. was one of the most dramatic implosions in the history of human civilization.</string>
    <string name="what_is_your_nickname">What is Your Nickname?</string>
    <string name="done">Done</string>
</resources>