<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/jojobanner"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/banner"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/jojo_stardust_crusaders"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_goneMarginEnd="16dp" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/jojoposter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/poster"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/director_label"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:fontFamily="@font/montserrat"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hirohiko_araki"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintLeft_toRightOf="@id/director_label"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            app:layout_constrainedWidth="true"
            app:layout_constraintRight_toLeftOf="@id/poster"
            app:layout_constraintHorizontal_bias="0.2" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, poster, director_label, director" />

        <TextView
            android:id="@+id/short_descriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/desc"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_section_bottom_barrier" />

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/actors"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/short_descriptions" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/actors_label"
            app:flow_wrapMode="chain"
            app:flow_horizontalBias="0"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_verticalGap="8dp"
            app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4, actor_5, actor_6, actor_7"
            />

        <TextView
            android:id="@+id/actor_1"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jotaro_kujo" />

        <TextView
            android:id="@+id/actor_2"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joseph_joestar" />

        <TextView
            android:id="@+id/actor_3"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noriaki_kakyoin" />

        <TextView
            android:id="@+id/actor_4"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mohammed_abdul" />

        <TextView
            android:id="@+id/actor_5"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jean_pierre_polnareff" />

        <TextView
            android:id="@+id/actor_6"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iggy" />

        <TextView
            android:id="@+id/actor_7"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dio" />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_goneMarginEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/watch"
            app:layout_constraintTop_toBottomOf="@id/actors"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:onClick="next"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_goneMarginEnd="0dp"
            app:layout_goneMarginStart="0dp"
            app:layout_constraintLeft_toRightOf="@id/like"
            app:layout_constraintRight_toLeftOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/actors"/>

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_goneMarginStart="0dp"
            app:layout_constraintLeft_toRightOf="@id/watch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actors"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>